# grapevined

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  grapectl  gvctl
cmd/: main.go
gateway/: Cargo.toml
gateway/src/: main.rs
internal/player/: player.go  receiver.go  utils.go
internal/server/: listener.go
src/: main.rs  player.rs  queue.rs  server.rs  shared.rs
web/: .env.local.example  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: layout.tsx  page.tsx  styles.css
web/components/: Controls.tsx
web/lib/: api.ts
